<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="25dp"
    android:paddingVertical="40dp"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_s"
        android:textColor="@color/light_red"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_title"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/textPan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pan_number"
        android:textColor="@color/grey"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTitle" />
    <EditText
        android:id="@+id/editPanCard"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="20dp"
        android:maxLength="10"
        android:inputType="textCapCharacters"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textPan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:textColor="@color/grey"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPanCard" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:maxLength="2"
        android:paddingHorizontal="10dp"
        app:layout_constraintWidth_percent=".25"
        app:layout_constraintTop_toBottomOf="@+id/textDate"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editMonth"
        app:layout_constraintWidth_percent=".25"
        android:background="@drawable/edit_text_background"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:inputType="number"
        android:maxLength="2"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textDate"
        app:layout_constraintStart_toEndOf="@+id/editDate"
        app:layout_constraintEnd_toStartOf="@+id/editYear"/>

    <EditText
        android:id="@+id/editYear"
        android:layout_width="0dp"
        android:background="@drawable/edit_text_background"
        android:layout_height="40dp"
        android:inputType="number"
        android:paddingHorizontal="10dp"
        android:maxLength="4"
        app:layout_constraintWidth_percent=".35"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textDate"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_agree"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDate" />

    <Button
        android:onClick="checkValidation"
        android:id="@+id/buttonNext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/string_next"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/agree"/>

    <TextView
        android:onClick="backScreen"
        android:id="@+id/noPanCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_don_t_have_a_pan"
        android:textColor="@color/purple_500"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNext" />

</androidx.constraintlayout.widget.ConstraintLayout>